# SDL-OpenGL-Template

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build-release.sh
src/: Draw.cpp  Draw.h  Main.cpp  Main.h  Resources.cpp  Resources.h  Shaders.h
